# sef_roboter

./: .travis.yml  README.md
robotiq_2f_model/model/: robotiq_2f_85.urdf.xacro
sef_roboter_bringup/: CMakeLists.txt  package.xml
sef_roboter_bringup/launch/: bringup.launch  bringup_moveit.launch
sef_roboter_bringup/launch/Gazebo Simulation/: gazebo_basic.launch  gazebo_pid_tunning.launch  gazebo_with_gui.launch  gazebo_with_moveit.launch
sef_roboter_bringup/launch/Real Robot/: real_robot_basic_interface.launch  real_robot_pid_tunning.launch  real_robot_real_time_control.launch  real_robot_tango_control.launch  real_robot_with_gui.launch  real_robot_with_moveit.launch
sef_roboter_claw_gazebo/: CMakeLists.txt  package.xml
sef_roboter_claw_gazebo/launch/: sef_roboter_world.launch
sef_roboter_claw_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
sef_roboter_claw_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  sr25_claw.srdf
sef_roboter_claw_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
sef_roboter_control/: CMakeLists.txt  package.xml
sef_roboter_control/config/: sef_roboter_control.yaml
sef_roboter_control/launch/: sef_roboter_control.launch
sef_roboter_gazebo/: CMakeLists.txt  package.xml
sef_roboter_gazebo/launch/: sef_roboter_world.launch
sef_roboter_ik_analysis/: CMakeLists.txt  package.xml
sef_roboter_ik_analysis/launch/: ik_analysis.launch  planning.launch
sef_roboter_ik_analysis/src/: sef_roboter_ik_analysis.cpp
sef_roboter_joint_publisher/: CMakeLists.txt  package.xml
sef_roboter_joint_publisher/Forms/: mainwindow.ui
sef_roboter_joint_publisher/Headers/: mainwindow.h
sef_roboter_joint_publisher/Sources/: main.cpp  mainwindow.cpp
sef_roboter_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
sef_roboter_moveit_config/config/: controllers.yaml  controllers_gazebo.yaml  controllers_real.yaml  fake_controllers.yaml  kinematics.yaml  sef_roboter.srdf  sef_roboter_sr25.srdf  stomp_config.yaml
sef_roboter_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sef_roboter_moveit_controller_manager.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  warehouse.launch
sef_roboter_msgs/: CMakeLists.txt  package.xml
sef_roboter_msgs/srv/: reference_joint.srv
sef_roboter_ros_control/: CMakeLists.txt  package.xml
sef_roboter_ros_control/config/: hw_config.yaml  joint_trajectory_real_controllers.yaml  joint_trajectory_simulation_controllers.yaml
sef_roboter_ros_control/include/sef_roboter_ros_control/: sef_roboter_hw_interface.h
sef_roboter_ros_control/launch/: gazebo.launch  hardware.launch  visualize.launch
sef_roboter_ros_control/src/: sef_roboter_hw_interface.cpp  sef_roboter_hw_main.cpp
sef_roboter_ros_control/srv/: homing.srv
sef_roboter_support/: CMakeLists.txt  package.xml
sef_roboter_support/config/: sr25.rviz
sef_roboter_support/launch/: display.launch  display_sr25_claw.launch  load_sr25.launch  sr25_claw.launch  test_sr25.launch
sef_roboter_support/meshes/sr25/collision/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl  sr25_axis_1.stl  sr25_axis_2.stl  sr25_axis_3.stl  sr25_axis_4.stl  sr25_axis_5.stl  sr25_axis_tool.stl  sr25_base_axis.stl
sef_roboter_support/meshes/sr25/visual/: base_link.stl  link_2.stl  link_3.stl  link_5.stl  sr25_axis_1.stl  sr25_axis_4.stl  sr25_axis_tool.stl
sef_roboter_support/test/: launch_test.xml
sef_roboter_support/urdf/: materials.xacro  sr25.gazebo  sr25.urdf  sr25.xacro  sr25_claw.urdf  sr25_claw.urdf.xacro  sr25_macro.xacro
sef_roboter_utils/: CMakeLists.txt  package.xml
sef_roboter_utils/launch/: button_plan_execute.launch  ply_vizualizer.launch  real_time_control.launch  tango_pose.launch
sef_roboter_utils/src/: accuracy_measurement.cpp  button_plan_execute.cpp  control_msg_parser.cpp  moveit_interface.cpp  real_time_control.cpp  tango_tool0_aligner.cpp
