<?xml version="1.0"?>
<package>
  <name>sef_roboter_bringup</name>
  <version>1.0.0</version>
  <description>Sef Roboter Bringup package</description>
  <maintainer email="durovsky987@gmail.com">Frantisek Durovsky</maintainer>
  <license>BSD</license>
  <author email="durovsky987@gmail.com">Frantisek Durovsky</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
