<?xml version="1.0"?>
<package>
  <name>sef_roboter_joint_publisher</name>
  <version>0.1.0</version>
  <description>GUI Joint trajectory publisher for SR25</description>

  <maintainer email="durovsky987@gmail.com">durovsky</maintainer>

  <license>BSD</license>

  <url type="website">http://www.smartroboticsys.eu/</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>

</package>
