<?xml version="1.0"?>
<package>
  <name>sef_roboter_ros_control</name>
  <version>0.0.1</version>
  <description>Sef Roboter hardware interface for ros control</description>

  <maintainer email="durovsky987@gmail.com">Frantisek Durovsky</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/ros_control_boilerplate</url>
  <url type="butracker">https://github.com/davetcoleman/ros_control_boilerplate/issues</url>
  <url type="repository">https://github.com/davetcoleman/ros_control_boilerplate/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ros_control_boilerplate</build_depend>

  <run_depend>ros_control_boilerplate</run_depend>

  <export>
  </export>
</package>
