<?xml version="1.0"?>
<package>
  <name>sef_roboter_ros_control</name>
  <version>0.0.1</version>
  <description>Sef Roboter hardware interface for ros control</description>

  <maintainer email="durovsky987@gmail.com">Frantisek Durovsky</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sef_roboter_msgs</build_depend>
  <build_depend>ros_control_boilerplate</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sef_roboter_msgs</run_depend>
  <run_depend>ros_control_boilerplate</run_depend>
  
</package>
