<?xml version="1.0"?>
<package>
  <name>sef_roboter_utils</name>
  <version>0.1.0</version>
  <description>The sef_roboter_utils package</description>

  <maintainer email="durovsky987@gmail.com">durovsky</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

</package>
